# youmedhub

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  HISTORY_DEVELOPMENT_PLAN.md  LICENSE  README.md  USAGE.md  agent.md  analyze_video.sh  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  shijue.md  tailwind.config.js  test_api.py  tsconfig.app.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
api/: dashscope-policy.ts  oss-sts.ts
backend/: .env.example  API.md  README.md  init_admin.py  models_config.json  pyproject.toml  requirements.txt  test_admin_auth.py  test_login_direct.py
backend/app/: database.py  main.py
backend/app/api/: admin_auth.py  analysis.py  auth.py  deps.py  oss.py  system.py  test_providers.py
backend/app/api/admin/: __init__.py  auth.py  system.py  tasks.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  oss_config.py  security.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/models/: __init__.py  admin.py  ai_model.py  analysis_task.py  base.py  user.py
backend/app/schemas/: admin.py  analysis.py  auth.py  common.py
backend/app/services/: ai_service.py  model_service.py  oss_service.py  task_monitor_service.py  upload_service.py
backend/app/services/ai_providers/: __init__.py  base.py  dashscope.py  openai.py  zhipu.py
backend/migrations/: add_use_official_sdk.py
backup/: ai_models_backup.csv  ai_models_backup.json  restore_ai_models.py  restore_ai_models.sql
docs/: ai-provider-architecture.md  roadmap.md  (+4 more)
(+144 files in other folders)
