[project]
name = "youmedhub"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "aiofiles==24.1.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "openai==1.54.4",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
]
